<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/wifi_search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SearchButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/load_btn"
        android:layout_alignEnd="@+id/load_btn" />
    <Button
        android:id="@+id/wifi_send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SendButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />
    <Button
        android:id="@+id/wifi_receive_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ReceiveButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/wifi_send_btn"
        android:layout_toRightOf="@+id/wifi_search_btn"
        android:layout_toEndOf="@+id/wifi_search_btn"
        android:layout_toStartOf="@id/wifi_send_btn"/>
    <Button
        android:id="@+id/load_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoadButton"
        android:layout_alignParentLeft="true"
        android:layout_above="@id/wifi_search_btn" />
    <Button
        android:id="@+id/detection_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DetectionButton"
        android:layout_alignParentRight="true"
        android:layout_above="@id/wifi_send_btn"
        android:layout_toRightOf="@+id/wifi_receive_btn"
        android:layout_toEndOf="@+id/wifi_receive_btn" />
    <Button
        android:id="@+id/property_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PropertyButton"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/wifi_receive_btn"
        android:layout_toRightOf="@id/load_btn"
        android:layout_toEndOf="@id/load_btn"
        android:layout_toLeftOf="@id/detection_btn"
        android:layout_toStartOf="@id/detection_btn" />
    <TextView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="number of faces detected:"
        android:layout_above="@id/load_btn"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:id="@+id/number_of_faces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_above="@id/detection_btn"
        android:layout_toRightOf="@id/num"
        android:layout_alignParentRight="true"
        android:gravity="right"/>
    <ListView
        android:id="@+id/face_position"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@id/num"></ListView>
    <TextView
        android:id="@+id/lux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LUX"
        android:layout_alignParentLeft="true"
        android:layout_above="@id/face_position"/>
    <TextView
        android:id="@+id/rdy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RDY"
        android:layout_above="@id/face_position"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/luy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LUY"
        android:layout_above="@id/face_position"
        android:layout_toRightOf="@id/lux" />
    <TextView
        android:id="@+id/rdx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RDX"
        android:layout_above="@id/face_position"
        android:layout_toLeftOf="@id/rdy" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/device_name"
        android:layout_alignParentTop="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/device_status"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/device_name"
        android:paddingLeft="30dp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/face_image"
        android:layout_above="@id/lux"
        android:layout_below="@id/device_name"
        />
</RelativeLayout>
